@@ -2,7 +2,6 @@ package oripa.domain.paint.outline;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -30,7 +29,7 @@ public class CloseTempOutline {
 
 		// Delete the current outline
 		List<OriLine> outlines = creasePattern.stream()
-				.filter(line -> line.isBoundary()).collect(Collectors.toList());
+				.filter(OriLine::isBoundary).toList();
 		creasePattern.removeAll(outlines);
 
 		adder.addOutlines(painter, outlineVertices);
