@@ -20,7 +20,6 @@ package oripa.util;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author OUCHI Koji
@@ -81,7 +80,7 @@ public class Matrices {
 	public static String toString(final int[][] mat) {
 		var strings = List.of(mat).stream()
 				.map(a -> String.join(",", Arrays.toString(a)))
-				.collect(Collectors.toList());
+				.toList();
 
 		return String.join(",", strings);
 	}
